--- a/Project-2/index.html
+++ b/Project-2/index.html
@@ -7,6 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
@@ -18,6 +19,35 @@
         <h4>Cart</h4>
         <i class="ri-shopping-bag-line"></i>
       </nav>
+      <div id="center">
+        <h1>
+          lightly padded,<br />
+          quality jackets in<br />
+          recycled polyester.
+        </h1>
+        <div id="center-in">
+          <p>
+            Exclusive brands aspire for the label haute<br />
+            couture, but the term is technically limited to <br />
+            memtHs of the Chambre Syndicale de la Haute
+          </p>
+          <div id="right">
+            <div class="element">
+              <a href="">Add to cart</a>
+              <i class="ri-arrow-right-up-fill"></i>
+            </div>
+            <div class="element">
+              <a href="">Product Details</a>
+              <i class="ri-arrow-right-up-fill"></i>
+            </div>
+            <div class="element">
+              <a href="">Shipping</a>
+              <i class="ri-arrow-right-up-fill"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="bottom"></div>
     </div>
   </body>
 </html>
