implemented right side of page

--- a/Project-3/index.html
+++ b/Project-3/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
@@ -29,11 +33,24 @@
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
             veniam quibusdam dolore! Architecto porro, animi aliquid aspernatur
-            
           </p>
         </div>
       </div>
-      <div id="right"></div>
+      <div id="right">
+        <div id="right-top">
+          <h4>$488</h4>
+          <h5>
+            Rating <i class="ri-star-s-fill"></i><i class="ri-star-s-fill"></i
+            ><i class="ri-star-s-fill"></i><i class="ri-star-s-fill"></i
+            ><i class="ri-star-s-fill"></i>
+          </h5>
+        </div>
+        <img src="dani-navarro-iyh1dW_xETY-unsplash.jpg" alt="standing man" />
+        <div id="circle">
+          <h5>add to bag</h5>
+        </div>
+        <h2 id="rotated-title">Cotton shirt</h2>
+      </div>
     </div>
   </body>
 </html>
